--- a/styleportfolio.css
+++ b/styleportfolio.css
@@ -1,7 +1,6 @@
 /*font body*/
 body {
 	font-family: 'Aclonica';
-	font-size: 2em;
 	color: whitesmoke;
 }
 /*background img*/
@@ -9,7 +8,7 @@ html{
     background: url(image_fond.jpg) no-repeat center fixed;
     background-size: cover;  
 }
-/*general informations*/
+/*global informations*/
 ul {list-style: none;}
 
 a {
@@ -18,19 +17,18 @@ a {
 }
 h1{
 	font-family: 'Teko', sans-serif;
-	font-size: 4em;
+	font-size: 2em;
 	letter-spacing:0.2em;
-}
-
-#corps {
-	display: flex;
 }
 
 /*header*/
 header{
 	display: flex;
 	justify-content: space-between;
-	font-size: 0.6em;
+}
+
+header h1{
+	font-size: 3.5em; 
 }
 
 .photoprofile img{
@@ -42,53 +40,48 @@ header{
 	margin-top: 1%;
 }
 
-
-
-
-nav {
-	flex: 4;
+#section {
+	display: flex;
 }
 
 /*aside*/
 aside {
 	background-color: rgba(196, 185, 185, .1);
 	flex: 1;
-	height: 300px;
 	padding:1%;	
-	border-radius: 3%;
+	border-radius: 5%;
 	text-align: center;
+	font-size: 1.2em;
+	display: flex;
+	flex-direction: column;
 }
 
-aside p{
-	text-align: justify;
+aside img{
+	margin-top: 5%;
 }
 
-/* animation menu nav*/
+/* animation & menu nav*/
 
-#menu {
-	padding: 0px;
-    margin: 5% 0 10px 0;
-	position: relative;
-	
+nav {
+	flex: 4;		
 }
 
 #menu li{
-	font-size: 50px;
-    display: block;
+	font-size: 1.5em;
+	letter-spacing: 17px;
+	margin-top: 4%;
 }
 
 #menu li a{
-	text-align: center;
 	color: transparent;
-	display: block;
 	text-transform: uppercase;
 	text-shadow: 0px 0px 4px #fff;
-	letter-spacing: 1px;
-	-webkit-transition: all 0.2s ease-in-out;
-	-moz-transition: all 0.2s ease-in-out;
-	-o-transition: all 0.2s ease-in-out;
-	-ms-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
+	
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	-ms-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
 }
 
 .bmenu:hover li a{
@@ -98,10 +91,14 @@ aside p{
 #menu li a:hover{
 	color: #fff;
 	text-shadow: 0px 0px 1px #fff;
-	padding-left: 10px;
+	padding-left: 30px;
 }
 
-/* animation menu nav fin */
-
-
+/* footer*/
+footer {
+	position: fixed;
+	bottom: 10px;
+	background:  rgba(125, 186, 246, 0.247);
+	border-radius: 100% 29px 52px 57px;
+}
 
