--- a/styleportfolio2.css
+++ b/styleportfolio2.css
@@ -1,29 +1,30 @@
+/* menu haut de page toutes pages saugf home)*/
 #menuhaut {
 	display: flex;
     padding-top: 2%;
     font-size: x-large;
 }
-
-
+#menuhaut li {
+    padding-right: 120px;
+}
+ 
+/* organisation corps des pages */
 section{
     display: grid;
     grid-template-columns: 1fr 30px 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 20px 1fr;
     margin-top: 1%;
 }
 .article1 {
-    grid-column: 1/2;
+    grid-column: 1/2; 
+    text-align: center;
 }
 .article2 { 
     grid-column: 3/4;
+    text-align: center;
 }
-.article3 {
-     
-}
-
-#menuhaut li {
-	padding-right: 120px;
-}
+.article3 {grid-column: 1/2; grid-row: 3;}
+.article4 {grid-column: 3/4; grid-row: 3;}
 
 article {
     background-color: rgba(232, 199, 176, 0.452);
@@ -34,25 +35,61 @@ article {
     text-align: center;
     padding-left: 2%;
     padding-right: 2%;
-    
 }
 
-article p{
-    text-align: justify;
+article p {text-align: justify;}
+
+article img {border-radius: 10%;}
+
+/*page me connaître et expro*/
+.intro {
+    color: whitesmoke;  
+    text-align: center;
+    font-size: 1.5em;
+    line-height: 1.5em;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
-article img{
-    border-radius: 10%;
-}
-
+/*pages projets*/
 #php {
     margin-bottom: 20px;
 }
 
+#bootstrap {
+    margin-bottom: 5px;
+}
 
+/*pages compétences*/
+.competencesnow {
+    color: whitesmoke;
+    text-align: center;
+}
 
+.competencesfutures{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: 30px 1fr 1fr;
+    
+} 
 
+#php {grid-column: 1; grid-row: 2;}
+#wordpress {grid-column: 3; grid-row: 2;}
+#reactN {grid-column: 5; grid-row: 2;}
+#react {grid-column: 2; grid-row: 3;}
+#symfony {grid-column: 4; grid-row: 3;}
 
+.transversales {
+    color: whitesmoke;  
+    text-align: center;
+    font-size: 1.2em;
+    line-height: 1.5em;
+    padding-left: 2%;
+    padding-right: 2%;
+    font-family: 'Courier New', Courier, monospace;
+}
 
+h3{text-decoration: underline;}
+h4{font-size: 1.2em;}
 
 
