--- a/styleportfolio2.css
+++ b/styleportfolio2.css
@@ -1,4 +1,4 @@
-/* menu haut de page toutes pages saugf home)*/
+/* menu haut de page toutes pages sauf home)*/
 #menuhaut {
 	display: flex;
     padding-top: 2%;
